infra/k8s/demo-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: demo
          image: andyschunke/bridge-demo
          imagePullPolicy: IfNotPresent

---
apiVersion: v1
kind: Service
metadata:
  name: demo-srv
spec:
  selector:
    app: demo
  ports:
    - name: demo
      protocol: TCP
      port: 3003
      targetPort: 3003
