infra/k8s/display-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: display-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: display
  template:
    metadata:
      labels:
        app: display
    spec:
      containers:
        - name: display
          image: andyschunke/bridge-display
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: display-srv
spec:
  selector:
    app: display
  ports:
    - name: display
      protocol: TCP
      port: 3002
      targetPort: 3002
